fix: review recommendations

--- a/src/content/docs/de/guides/deploy/flightcontrol.mdx
+++ b/src/content/docs/de/guides/deploy/flightcontrol.mdx
@@ -5,17 +5,17 @@ type: deploy
 i18nReady: true
 ---
 
-Du kannst eine Astro-Site mit [Flightcontrol](https://www.flightcontrol.dev?ref=astro) veröffentlichen, das vollautomatische Bereitstellungen in deinem AWS-Konto ermöglicht.
+Du kannst eine Astro-Website mit [Flightcontrol](https://www.flightcontrol.dev?ref=astro) veröffentlichen, das vollautomatische Bereitstellungen in deinem AWS-Konto ermöglicht.
 
-Unterstützt sowohl statische als auch SSR-Astro-Sites.
+Es werden sowohl statische als auch SSR-basierte Astro-Websites unterstützt.
 
-## Wie man veröffentlicht 
+## So funktioniert die Veröffentlichung
 
 1. Erstelle ein Flightcontrol-Konto unter [app.flightcontrol.dev/signup](https://app.flightcontrol.dev/signup?ref=astro)
 1. Gehe zu [app.flightcontrol.dev/projects/new/1](https://app.flightcontrol.dev/projects/new/1)
 1. Verbinde dein GitHub-Konto und wähle dein Repo aus
 1. Wähle deinen gewünschten "Config Type":
-    - `GUI` (alle Einstellungen werden über das Flightcontrol Dashboard verwaltet), wo du die Voreinstellung `Astro Static` oder `Astro SSR` auswählst
+    - `GUI` (alle Einstellungen werden über das Flightcontrol-Dashboard verwaltet), wo du die Voreinstellung `Astro Static` oder `Astro SSR` auswählst
     - `flightcontrol.json` ("Infrastruktur als Code"-Option, bei der sich alle Konfigurationen in deinem Repo befinden), bei der du eine Astro-Beispielkonfiguration auswählst und sie dann als `flightcontrol.json` zu deiner Codebasis hinzufügst
 1. Passe die Konfiguration nach Bedarf an
 1. Klicke auf "Projekt erstellen" und führe alle erforderlichen Schritte durch, z. B. die Verknüpfung deines AWS-Kontos.
