--- a/src/content/docs/de/guides/deploy/google-firebase.mdx
+++ b/src/content/docs/de/guides/deploy/google-firebase.mdx
@@ -5,9 +5,9 @@ type: deploy
 i18nReady: true
 ---
 
-[Firebase Hosting](https://firebase.google.com/products/hosting) ist ein Dienst der App-Entwicklungsplattform [Firebase](https://firebase.google.com/) von Google, der für die Veröffentlichung einer Astro-Site genutzt werden kann.
+[Firebase Hosting](https://firebase.google.com/products/hosting) ist ein Dienst der App-Entwicklungsplattform [Firebase](https://firebase.google.com/) von Google, der für die Veröffentlichung einer Astro-Website genutzt werden kann.
 
-## Wie man veröffentlicht
+## So funktioniert die Veröffentlichung
 
 1. Stelle sicher, dass du [firebase-tools](https://www.npmjs.com/package/firebase-tools) installiert hast.
 
