--- a/src/content/docs/de/guides/deploy/heroku.mdx
+++ b/src/content/docs/de/guides/deploy/heroku.mdx
@@ -7,7 +7,7 @@ i18nReady: true
 
 [Heroku](https://www.heroku.com/) ist eine Platform-as-a-Service für die Erstellung, den Betrieb und die Verwaltung moderner Apps in der Cloud. Mit dieser Anleitung kannst du eine Astro-Website zu Heroku übertragen.
 
-## How to deploy
+## So funktioniert die Veröffentlichung
 
 1. Installiere das [Heroku CLI](https://devcenter.heroku.com/articles/heroku-cli).
 
@@ -34,12 +34,12 @@ i18nReady: true
 5. Richte deine Heroku Git remote ein:
 
    ```bash
-   # version change
+   # Versionsnummer aktualisieren
    $ git init
    $ git add .
    $ git commit -m "Meine Seite ist bereit für die Veröffentlichung."
 
-   # erstellt eine neue App mit einem bestimmten Namen
+   # Eine neue App mit einem bestimmten Namen erstellen
    $ heroku apps:create example
 
    # Buildpack für statische Websites einstellen
@@ -49,9 +49,9 @@ i18nReady: true
 6. Veröffentliche deine Website:
 
    ```bash
-   # publish site
+   # Website veröffentlichen
    $ git push heroku master
 
-   # öffnet einen Browser, um die Dashboard-Version von Heroku CI anzuzeigen
+   # Browser öffnen, um die Dashboard-Version von Heroku CI anzuzeigen
    $ heroku open
    ```
