--- a/src/content/docs/de/guides/deploy/kinsta.mdx
+++ b/src/content/docs/de/guides/deploy/kinsta.mdx
@@ -12,10 +12,10 @@ Schau dir [das offizielle Kinsta Application Hosting Starter Projekt für Astro]
 :::
 
 ## Konfigurieren deines Astro-Projekts
-Um dein Projekt auf **Kinsta Application Hosting** zu hosten, musst du:
-- Füge ein Feld `Name` in deine `package.json` ein. (Das kann alles Mögliche sein und hat keinen Einfluss auf deine Bereitstellung)
+Um dein Projekt auf **Kinsta Application Hosting** zu hosten, musst du Folgendes tun:
+- Füge ein Feld `name` in deine `package.json` ein. (Der Wert ist frei definierbar und hat keinen Einfluss auf deine Bereitstellung.)
 - Füge ein `build`-Skript in deine `package.json` ein. (Dein Astro-Projekt sollte es bereits enthalten.)
-- Installiere das [`serve`](https://www.npmjs.com/package/serve) Paket und setze das `start` Skript auf `serve dist/`.
+- Installiere das [`serve`](https://www.npmjs.com/package/serve)-Paket und setze das `start`-Skript auf `serve dist/`.
 
 Hier sind die notwendigen Zeilen in deiner `package.json` Datei:
 ```json title="package.json" {2,6} ins={12} "serv dist/"
@@ -35,11 +35,11 @@ Hier sind die notwendigen Zeilen in deiner `package.json` Datei:
 }
 ```
 
-## Wie man veröffentlicht
+## So funktioniert die Veröffentlichung
 Sobald das GitHub-Repository deines Projekts verbunden ist, kannst du im **MyKinsta Admin Panel** manuelle Deployments zum Kinsta Application Hosting auslösen. Du kannst auch automatische Deployments in deinem Admin-Panel einrichten.
 
 ### Konfiguration einer neuen Kinsta-Anwendung
-1. Gehe zum [My Kinsta](https://my.kinsta.com/) Verwaltungsbereich.
+1. Gehe zum [My Kinsta](https://my.kinsta.com/)-Verwaltungsbereich.
 2. Gehe auf die Registerkarte **Anwendungen**.
 3. Verbinde dein GitHub-Repository.
 4. Drücke auf die Schaltfläche **Dienst hinzufügen** > **Anwendung**.
