--- a/src/content/docs/de/guides/deploy/edgio.mdx
+++ b/src/content/docs/de/guides/deploy/edgio.mdx
@@ -8,18 +8,18 @@ i18nReady: true
 Du kannst dein Astro-Projekt auf [Edgio](https://www.edg.io/) veröffentlichen, einer Edge- und CDN-Plattform zum Bereitstellen, Schützen und Beschleunigen von Websites und APIs.
 
 :::tip
-Schau dir [den Astro-Leitfaden in Edgios Dokumenten](https://docs.edg.io/guides/astro) an!
+Schau dir [die Astro-Anleitung in Edgios Dokumentation](https://docs.edg.io/guides/astro) an!
 :::
 
-## Wie man veröffentlicht
+##  So funktioniert die Veröffentlichung
 
-1. Installiere [das Edgio CLI](https://docs.edg.io/guides/cli) global über das Terminal, falls du das noch nicht getan hast.
+1. Installiere [das Edgio CLI](https://docs.edg.io/guides/cli) (Kommandozeilen&shy;schnittstelle) global über das Terminal, falls du das noch nicht getan hast.
 
     ```bash
     npm install -g @edgio/cli
     ```
 
-2. Add Edgio to your Astro site
+2. Füge Edgio deiner Astro-Seite hinzu
 
     ```bash
     edgio init
@@ -42,7 +42,7 @@ Schau dir [den Astro-Leitfaden in Edgios Dokumenten](https://docs.edg.io/guides/
     };
     ```
 
-4. Veröffentlichung in Edgio
+4. Veröffentliche deine Website auf Edgio
 
     ```bash
     edgio deploy
