--- a/src/content/docs/de/guides/deploy/google-cloud.mdx
+++ b/src/content/docs/de/guides/deploy/google-cloud.mdx
@@ -5,19 +5,19 @@ type: deploy
 i18nReady: true
 ---
 
-[Google Cloud](https://cloud.google.com/) ist eine voll ausgestattete Web-App-Hosting-Plattform, die für die Veröffentlichung einer Astro-Site verwendet werden kann.
+[Google Cloud](https://cloud.google.com/) ist eine voll ausgestattete Web-App-Hosting-Plattform, die für die Veröffentlichung einer Astro-Website verwendet werden kann.
 
-## Wie man veröffentlicht
+## So funktioniert die Veröffentlichung
 
 ### Cloud Storage (nur statisch)
 
-1. [Neues GCP-Projekt erstellen](<https://console.cloud.google.com/projectcreate>), oder wähle ein bereits vorhandenes aus.
+1. [Erstelle ein neues GCP-Projekt](<https://console.cloud.google.com/projectcreate>) oder wähle ein bereits vorhandenes Projekt aus.
 
 2. Erstelle einen neuen Bucket unter [Cloud Storage](https://cloud.google.com/storage).
 
-3. Gib ihm einen Namen und die anderen erforderlichen Einstellungen.
+3. Gib ihm einen Namen und nimm alle anderen erforderlichen Einstellungen vor.
 
-4. Lade deinen `dist`-Ordner dort hinein oder lade ihn mit [Cloud Build](https://cloud.google.com/build) hoch.
+4. Lade deinen `dist`-Ordner entweder manuell oder unter Verwendung von [Cloud Build](https://cloud.google.com/build) hoch.
 
 5. Aktiviere den öffentlichen Zugriff, indem du `allUsers` eine neue Berechtigung namens `Storage Object Viewer` hinzufügst.
 
@@ -25,11 +25,11 @@ i18nReady: true
 
 ### Cloud Run (SSR und statisch)
 
-Cloud Run ist eine serverlose Plattform, die es dir ermöglicht, einen Container zu betreiben, ohne dass du eine Infrastruktur verwalten musst. Sie kann sowohl für statische als auch für SSR-Sites genutzt werden.
+Cloud Run ist eine serverlose Plattform, die es dir ermöglicht, einen Container zu betreiben, ohne dass du eine Infrastruktur verwalten musst. Sie kann sowohl für statische als auch für SSR-Websites genutzt werden.
 
 #### Bereite den Dienst vor
 
-1. [Neues GCP-Projekt erstellen](<https://console.cloud.google.com/projectcreate>), oder wähle ein bereits vorhandenes aus.
+1. [Erstelle ein neues GCP-Projekt](<https://console.cloud.google.com/projectcreate>) oder wähle ein bereits vorhandenes Projekt aus.
 
 2. Stelle sicher, dass die [Cloud Run API](<https://console.cloud.google.com/apis/library/run.googleapis.com>) aktiviert ist.
 
@@ -67,7 +67,7 @@ RUN pnpm run build
 ```
 :::
 
-##### Dockerfile für SSR-Seiten (Beispiel)
+##### Dockerfile für SSR-Websites (Beispiel)
 
 Das folgende Dockerfile erstellt deine Website und stellt sie mit Node.js (SSR-Adapter) auf Port `3000` bereit.
 
@@ -86,8 +86,8 @@ EXPOSE 3000
 CMD node ./dist/server/entry.mjs
 ```
 
-:::tip[Keep this in mind]
-Dies sind nur Beispiele für Dockerdateien. Du kannst sie an deine Bedürfnisse anpassen. Du könntest zum Beispiel ein anderes Bild verwenden, wie `node:lts-alpine`.
+:::tip[Bitte bedenke Folgendes:]
+Dies sind nur Beispiele für Dockerdateien. Du kannst sie an deine Bedürfnisse anpassen. Du könntest zum Beispiel ein anderes Docker-Image wie `node:lts-alpine` verwenden.
 
 ```docker title="Dockerfile" del={1} add={2}
 FROM node:lts AS runtime
@@ -95,11 +95,11 @@ FROM node:lts-alpine AS runtime
 ```
 :::
 
-#### Baue den Container
+#### Erstelle den Container
 
 Sobald das Dockerfile erstellt ist, erstellst du ein Image und schiebst es zu Google Cloud. Es gibt mehrere Möglichkeiten, dies zu tun:
 
-**Lokaler Erstellung mit Docker**:
+**Lokale Erstellung mit Docker**:
 
 Verwende den Befehl `docker build`, um das Image zu erstellen, `docker tag`, um ihm einen Tag zu geben, und dann `docker push`, um es an eine Registry zu übergeben. Im Fall von Google Cloud ist [Google Cloud Registry](https://cloud.google.com/container-registry/docs/pushing-and-pulling#add-registry) die einfachste Option, aber du kannst auch [Docker Hub](<https://hub.docker.com/>) verwenden.
 
@@ -115,14 +115,14 @@ docker push HOSTNAME/PROJECT-ID/IMAGE:TAG
 
 Ändere die folgenden Werte in den obigen Befehlen, damit sie zu deinem Projekt passen:
 
-- `SOURCE_IMAGE`: den lokalen Image-Namen oder die Image-ID.
-- `HOSTNAME`: der Registry-Host (`gcr.io`, `eu.grc.io`, `asia.gcr.io`, `us.gcr.io`).
+- `SOURCE_IMAGE`: Der lokalen Image-Namen oder die Image-ID.
+- `HOSTNAME`: Der Registry-Host (`gcr.io`, `eu.grc.io`, `asia.gcr.io`, `us.gcr.io`).
 - `PROJECT`: Deine Google Cloud Projekt-ID.
-- `TARGET-IMAGE`: den Namen für das Image, wenn es in der Registry gespeichert wird.
-- `TAG` ist die Version, die mit dem Image verknüpft ist
+- `TARGET-IMAGE`: Der Name für das Image, wenn es in der Registry gespeichert wird.
+- `TAG` Die Version, die mit dem Image verknüpft ist
 
 
-[Lies mehr in der Google Cloud-Dokumentation](https://cloud.google.com/container-registry/docs/pushing-and-pulling)
+[Erfahre mehr in der Google-Cloud-Dokumentation](https://cloud.google.com/container-registry/docs/pushing-and-pulling)
 
 **Ein anderes Tool verwenden**:
 
@@ -136,6 +136,6 @@ Anstatt die Dockerdatei lokal zu erstellen, kannst du Google Cloud anweisen, das
 
 Das Deployment kann manuell in deinem Terminal [mit `gcloud`](<https://cloud.google.com/run/docs/deploying#service>) oder automatisch mit [Cloud Build](https://cloud.google.com/build) oder einem anderen CI/CD-System durchgeführt werden.
 
-:::note[Brauchst du öffentlichen Zugang?]
-Vergiss nicht, die Berechtigung `Cloud Run Invoker` zur Gruppe `allUsers` in den Cloud Run Berechtigungseinstellungen hinzuzufügen!
+:::note[Benötigst du öffentlichen Zugang?]
+Vergiss nicht, die Berechtigung `Cloud Run Invoker` zur Gruppe `allUsers` in den Cloud-Run-Berechtigungseinstellungen hinzuzufügen!
 :::
