Apply Yan's suggestions
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -44,14 +44,14 @@ bun install
 
 ## Running the development server
 
-Running the development server with Bun, should feel quite familiar:
+Running the development server with Bun should feel quite familiar:
 
 ```bash
 bun run dev
 ```
 
 :::note[Note]
-Keep in mind that using `bun dev` will not work, as that will start Bun's internal devserver and not your Astro development server.
+Keep in mind that using `bun dev` will not work, as that will start Bun's internal dev server and not your Astro development server.
 :::
 
 ## Using Astro integrations
