Apply final fixes

--- a/src/content/docs/de/guides/deploy/edgio.mdx
+++ b/src/content/docs/de/guides/deploy/edgio.mdx
@@ -1,6 +1,6 @@
 ---
-title: Veröffentliche deine Astro-Site in Edgio 
-description: Wie du deine Astro-Website mit Edgio im Internet veröffentlichst.
+title: Veröffentliche deine Astro-Website auf Edgio 
+description: Wie du deine Astro-Website auf Edgio im Internet veröffentlichst.
 type: deploy
 i18nReady: true
 ---
@@ -13,7 +13,7 @@ Schau dir [die Astro-Anleitung in Edgios Dokumentation](https://docs.edg.io/guid
 
 ##  So funktioniert die Veröffentlichung
 
-1. Installiere [das Edgio CLI](https://docs.edg.io/guides/cli) (Kommandozeilen&shy;schnittstelle) global über das Terminal, falls du das noch nicht getan hast.
+1. Installiere die Kommandozeilen&shy;schnittstelle [Edgio CLI](https://docs.edg.io/guides/cli) global über dein Terminal, falls du das noch nicht getan hast.
 
     ```bash
     npm install -g @edgio/cli
