--- a/src/content/docs/de/guides/deploy/flightcontrol.mdx
+++ b/src/content/docs/de/guides/deploy/flightcontrol.mdx
@@ -1,5 +1,5 @@
 ---
-title: Veröffentliche deine Astro-Site mit Flightcontrol auf AWS
+title: Veröffentliche deine Astro-Website mit Flightcontrol auf AWS
 description: Wie du deine Astro-Website mit Flightcontrol auf AWS veröffentlichst
 type: deploy
 i18nReady: true
