--- a/src/content/docs/de/guides/deploy/google-cloud.mdx
+++ b/src/content/docs/de/guides/deploy/google-cloud.mdx
@@ -1,6 +1,6 @@
 ---
-title: Veröffentliche deine Astro-Site in der Google Cloud
-description: Wie du deine Astro-Website mit Google Cloud im Internet veröffentlichst.
+title: Veröffentliche deine Astro-Website auf Google Cloud
+description: Wie du deine Astro-Website auf Google Cloud im Internet veröffentlichst.
 type: deploy
 i18nReady: true
 ---
@@ -53,7 +53,7 @@ COPY --from=build /app/dist /usr/local/apache2/htdocs/
 EXPOSE 80
 ```
 
-:::note[notes]
+:::note
 Wenn du einen anderen Paketmanager als `npm` verwendest, musst du die Befehle ändern:
 
 ```docker title="Dockerfile" add={4} "pnpm"
@@ -97,7 +97,7 @@ FROM node:lts-alpine AS runtime
 
 #### Erstelle den Container
 
-Sobald das Dockerfile erstellt ist, erstellst du ein Image und schiebst es zu Google Cloud. Es gibt mehrere Möglichkeiten, dies zu tun:
+Sobald das Dockerfile erstellt ist, erstellst du ein Image und überträgst es zu Google Cloud. Es gibt mehrere Möglichkeiten, dies zu tun:
 
 **Lokale Erstellung mit Docker**:
 
@@ -109,7 +109,7 @@ docker build .
 
 docker tag SOURCE_IMAGE HOSTNAME/PROJECT-ID/TARGET-IMAGE:TAG
 
-# Push dein Image in eine Registry
+# Übertrage dein Image in eine Registry
 docker push HOSTNAME/PROJECT-ID/IMAGE:TAG
 ```
 
@@ -130,12 +130,12 @@ Du kannst ein CI/CD-Tool verwenden, das Docker unterstützt, z.B. [GitHub Action
 
 **Erstelle mit [Cloud Build](https://cloud.google.com/build)**:
 
-Anstatt die Dockerdatei lokal zu erstellen, kannst du Google Cloud anweisen, das Image per Fernzugriff zu erstellen. Siehe die [Google Cloud Build Dokumentation hier](<https://cloud.google.com/build/docs/build-push-docker-image>).
+Anstatt die Dockerdatei lokal zu erstellen, kannst du Google Cloud anweisen, das Image per Fernzugriff zu erstellen. Siehe dazu die [Google Cloud Build-Dokumentation](<https://cloud.google.com/build/docs/build-push-docker-image>).
 
 #### Den Container erstellen
 
 Das Deployment kann manuell in deinem Terminal [mit `gcloud`](<https://cloud.google.com/run/docs/deploying#service>) oder automatisch mit [Cloud Build](https://cloud.google.com/build) oder einem anderen CI/CD-System durchgeführt werden.
 
 :::note[Benötigst du öffentlichen Zugang?]
-Vergiss nicht, die Berechtigung `Cloud Run Invoker` zur Gruppe `allUsers` in den Cloud-Run-Berechtigungseinstellungen hinzuzufügen!
+Vergiss nicht, die Berechtigung `Cloud Run Invoker` zur Gruppe `allUsers` in den Cloud Run-Berechtigungseinstellungen hinzuzufügen!
 :::
