--- a/src/content/docs/de/guides/deploy/heroku.mdx
+++ b/src/content/docs/de/guides/deploy/heroku.mdx
@@ -1,15 +1,15 @@
 ---
-title: Veröffentliche deine Astro-Site auf Heroku
-description: Wie du deine Astro-Website mit Heroku ins Internet veröffentlichst.
+title: Veröffentliche deine Astro-Website auf Heroku
+description: Wie du deine Astro-Website auf Heroku im Internet veröffentlichst.
 type: deploy
 i18nReady: true
 ---
 
-[Heroku](https://www.heroku.com/) ist eine Platform-as-a-Service für die Erstellung, den Betrieb und die Verwaltung moderner Apps in der Cloud. Mit dieser Anleitung kannst du eine Astro-Website zu Heroku übertragen.
+[Heroku](https://www.heroku.com/) ist eine Platform-as-a-Service für die Erstellung, den Betrieb und die Verwaltung moderner Apps in der Cloud. Mit dieser Anleitung kannst du eine Astro-Website auf Heroku veröffentlichen.
 
 ## So funktioniert die Veröffentlichung
 
-1. Installiere das [Heroku CLI](https://devcenter.heroku.com/articles/heroku-cli).
+1. Installiere die Kommandozeilen&shy;schnittstelle [Heroku CLI](https://devcenter.heroku.com/articles/heroku-cli).
 
 2. Erstelle ein Heroku-Konto, indem du dich [anmeldest](https://signup.heroku.com/).
 
@@ -37,7 +37,7 @@ i18nReady: true
    # Versionsnummer aktualisieren
    $ git init
    $ git add .
-   $ git commit -m "Meine Seite ist bereit für die Veröffentlichung."
+   $ git commit -m "Meine Website ist bereit für die Veröffentlichung."
 
    # Eine neue App mit einem bestimmten Namen erstellen
    $ heroku apps:create example
