--- a/src/content/docs/de/guides/deploy/kinsta.mdx
+++ b/src/content/docs/de/guides/deploy/kinsta.mdx
@@ -1,14 +1,14 @@
 ---
-title: Veröffentliche deine Astro-Site auf Kinsta Application Hosting
-description: So veröffentlichst du deine Astro-Website auf Kinsta Application Hosting im Netz.
+title: Veröffentliche deine Astro-Website auf Kinsta Application Hosting
+description: So veröffentlichst du deine Astro-Website auf Kinsta Application Hosting im Internet.
 type: deploy
 i18nReady: true
 ---
 
-Du kannst [Kinsta Application Hosting](https://kinsta.com/application-hosting/) nutzen, um eine Astro-Website auf deren Cloud-Hosting zu hosten.
+Du kannst [Kinsta Application Hosting](https://kinsta.com/application-hosting/) nutzen, um eine Astro-Website auf deren Cloud-Hosting zu veröffentlichen.
 
 :::tip[Suchst du ein Beispiel?]
-Schau dir [das offizielle Kinsta Application Hosting Starter Projekt für Astro](https://github.com/kinsta/hello-world-astro) an!
+Schau dir [das offizielle Kinsta Application Hosting Starter-Projekt für Astro](https://github.com/kinsta/hello-world-astro) an!
 :::
 
 ## Konfigurieren deines Astro-Projekts
