--- a/src/content/docs/de/guides/deploy/google-firebase.mdx
+++ b/src/content/docs/de/guides/deploy/google-firebase.mdx
@@ -1,6 +1,6 @@
 ---
-title: Veröffentliche deine Astro-Site auf Googles Firebase Hosting
-description: Wie du deine Astro-Website mit dem Firebase-Hosting von Google im Internet veröffentlichst.
+title: Veröffentliche deine Astro-Website auf Google's Firebase Hosting
+description: Wie du deine Astro-Website auf Firebase-Hosting von Google im Internet veröffentlichst.
 type: deploy
 i18nReady: true
 ---
@@ -34,4 +34,4 @@ i18nReady: true
    }
    ```
 
-3. Nachdem du `npm run build` ausgeführt hast, implementiere es mit dem Befehl `firebase deploy`.
+3. Nachdem du `npm run build` ausgeführt hast, veröffentliche deine Website mit dem Befehl `firebase deploy`.
