--- a/src/content/docs/en/guides/styling.mdx
+++ b/src/content/docs/en/guides/styling.mdx
@@ -155,7 +155,7 @@ You can style HTML elements inline using the `style` attribute. This can be a CS
 ```astro title="src/pages/index.astro"
 // These are equivalent:
 <p style={{ color: "brown", textDecoration: "underline" }}>My text</p>
-<p style="color: brown; text-decoration: underline">My text</p>
+<p style="color: brown; text-decoration: underline;">My text</p>
 ```
 
 ## External Styles
