--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -11,7 +11,7 @@ Using Bun with Astro still is experimental, not all integrations might work as e
 
 ## Installing Bun
 
-installing Bun is a breeze - just run one simple command in your terminal and you're ready to go! Plus, with support for `npx packages, creating a new Astro project with Bun is as easy as pie.
+Installing Bun is a breeze - just run one simple command in your terminal and you're ready to go! Plus, with support for `npx packages, creating a new Astro project with Bun is as easy as pie.
 
 Here's how you can install Bun:
 
