--- a/src/content/docs/en/guides/styling.mdx
+++ b/src/content/docs/en/guides/styling.mdx
@@ -424,7 +424,7 @@ Astro supports CSS preprocessors such as [Sass][sass], [Stylus][stylus], and [Le
 ### Sass and SCSS
 
  ```shell
- npm install -D sass
+ npm install sass
  ```
 
 Use  `<style lang="scss">` or `<style lang="sass">` in `.astro` files
@@ -432,7 +432,7 @@ Use  `<style lang="scss">` or `<style lang="sass">` in `.astro` files
 ### Stylus
 
 ```shell
-npm install -D stylus
+npm install stylus
 ```
 
 Use `<style lang="styl">` or `<style lang="stylus">` in `.astro` files
@@ -440,7 +440,7 @@ Use `<style lang="styl">` or `<style lang="stylus">` in `.astro` files
 ### Less
 
 ```shell
-npm install -D less
+npm install less
 ```
 
 Use `<style lang="less">` in `.astro` files.
