--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -232,19 +232,19 @@ Here is an example of the configuration and commands required when using Yarn:
 1. In `playwright.config.ts`, add the `webServer` object and update the command value to `yarn preview`.
 
     ```js title="playwright.config.ts" ins={3-8} "yarn preview"
-    import type { PlaywrightTestConfig } from '@playwright/test';
-    const config: PlaywrightTestConfig = {
+    import { defineConfig } from '@playwright/test';
+    
+    export default defineConfig({
       webServer: {
         command: 'yarn preview',
-        url: 'http://localhost:3000/app/',
+        url: 'http://localhost:3000/',
         timeout: 120 * 1000,
         reuseExistingServer: !process.env.CI,
       },
       use: {
-        baseURL: 'http://localhost:3000/app/',
+        baseURL: 'http://localhost:3000/',
       },
-    };
-    export default config;
+    });
     ```
 
 1. Run `yarn build`, then run `yarn test:e2e` to run the Playwright tests.
