fix: Update space.mdx grammar
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -9,7 +9,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [Deta Space](https://deta.space/developers) is a personal computer that lives in the cloud — a ‘personal cloud’. You can build and run apps for yourself in your own "Space". You can publish the apps you've built, and they'll run for people all around the world. 
 
-You can also install apps published by other devs. You'll get a personal copy of the app in your own cloud, running on your own infrastructure. All the data that all these apps save to your Space is for you: to explore, to extend, and to export, if you like.
+You can also install apps published by other devs. You'll get a personal copy of the app in your own cloud, running on your infrastructure. All the data that all these apps save to your Space is for you: to explore, to extend, and to export, if you like.
 
 This guide includes step-by-step instructions for building sites in Space. You can build any type of Astro sites in Space: either a static site or a server-rendered site.
 
