add last translated part

--- a/src/content/docs/fr/guides/migrate-to-astro.mdx
+++ b/src/content/docs/fr/guides/migrate-to-astro.mdx
@@ -29,3 +29,19 @@ Selon votre projet déjà existant, vous pourrez peut-être utiliser votre :
 - [Fichiers Markdown/MDX](/fr/guides/markdown-content/), configuré en utilisant votre [plugin remark et rehype](/fr/guides/markdown-content/#configuration-de-markdown-et-mdx) déjà existant.
 
 - [Contenu depuis un CMS](/fr/guides/cms/) à travers une intégration ou une API.
+
+## Quels projects puis-je convertir vers Astro ?
+
+[De nombreux sites existants peuvent être construits avec Astro](/fr/concepts/why-astro/). Astro est parfaitement adapté à vos sites existants basés sur le contenu, tels que les blogs, les landing pages, les sites marketing et les portfolios. Astro s'intègre à plusieurs Headless CMS populaires et vous permet de connecter des paniers de boutique d'e-commerce.
+
+Astro vous permet de choisir entre un site généré statiquement et le [rendu côté serveur (SSR)](/fr/guides/server-side-rendering/), ce qui en fait un excellent remplacement pour les SSGs ou pour les sites qui ont besoin de récupérer des données à la volée.
+
+## Comment la conception de mon projet va-t-il évoluer ?
+
+En fonction de votre projet existant, vous devrez peut-être penser différemment à propos de :
+
+- Concevoir en [îles Astro](/fr/concepts/islands/#quest-ce-quune-île-astro) pour éviter d'envoyer du Javascript inutile au navigateur.
+
+- Fournir une activité côté client avec les [balises `<script>` côté client](/fr/guides/client-side-scripts/) ou les [composants de Framework UI](/fr/core-concepts/framework-components/).
+
+- Gérer [l'état partagé](/fr/core-concepts/sharing-state/) avec les Nano Stores ou un local storage au lieu de Wrapper et Hooks à l'échelle de l'application.
