fix: Add space.mdx clarifications
Co-authored-by: Maximilian Schiller <schiller@mxis.ch>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -27,7 +27,7 @@ space new
 ```
 
 :::note
-The Space CLI might prompt you with the `nodejs16` engine configuration. You may accept or disregard the recommendation, we will guide you through both options.
+The Space CLI will try to detect the right configuration for your app. Accept the suggested configuration and follow the instructions below on how to configure it for your Astro app.
 :::
 
 
