--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -97,6 +97,18 @@ micros:
     run: "node ./dist/server/entry.mjs"
 ```
 
+## How to deploy
+
+Once you have your project setup the only thing left to do is push your project to Space:
+
+```bash
+space push
+```
+
+This will run the build process and create a new [Space app instance](https://deta.space/docs/en/basics/revisions#testing-changes) where you can access your Astro app.
+
+By default Space apps are private and are only accessible to you. If you want to make your app available to others you can use [Public Routes](https://deta.space/docs/en/reference/spacefile#public_routes) to make parts of your app public or you can [create a release](https://deta.space/docs/en/basics/releases) to let others install your app into their own personal cloud.
+
 ## Next steps
 
 - [Add more compute to your Space project](https://deta.space/docs/en/basics/micros)
