fix: Add space.mdx clarifications
Co-authored-by: Maximilian Schiller <schiller@mxis.ch>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -49,7 +49,7 @@ micros:
     serve: dist
 ```
 
-## Server-side rendering
+### Server-side rendering
 
 If you wish to use [server-side rendering (SSR)](https://docs.astro.build/en/guides/server-side-rendering/) in your Astro project, you will need to install the [`@astrojs/node`](https://docs.astro.build/en/guides/integrations-guide/node/) adapter first. 
 
