fix: Add space.mdx clarifications
Co-authored-by: Maximilian Schiller <schiller@mxis.ch>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -31,7 +31,9 @@ The Space CLI will try to detect the right configuration for your app. Accept th
 :::
 
 
-## Static site
+## Project Configuration
+
+### Static site
 
 If you build a simple Astro site with no adapters, you don’t need any extra configuration to your Astro project. 
 
