Indent file tree & highlight lang folders

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -14,16 +14,17 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
 
 1. Create a directory for each language you want to support. For example, `en/` and `fr/` if you are supporting English and French:
 
-<FileTree>
+    <FileTree>
     - src/
       - pages/
-        - en/
+        - **en/**
           - about.astro
           - index.astro
-        - fr/
+        - **fr/**
           - about.astro
           - index.astro
-</FileTree>
+        - index.astro
+    </FileTree>
 
     
 2. Set up `src/pages/index.astro` to redirect to your default language.
