Add link explaining meta refresh approach

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -35,6 +35,8 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
     ---
     <meta http-equiv="refresh" content="0;url=/en/" />
     ```
+
+    This approach uses a [meta refresh](https://en.wikipedia.org/wiki/Meta_refresh), which will work no matter how you deploy your site.
     
 
 ### Translate UI
