Add alternative redirect strategy for SSR

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -38,6 +38,15 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
 
     This approach uses a [meta refresh](https://en.wikipedia.org/wiki/Meta_refresh), which will work no matter how you deploy your site.
     
+    If you are using an SSR adapter, you can use [`Astro.redirect`](/en/guides/server-side-rendering/#astroredirect) instead:
+
+    ```astro
+    ---
+    // src/pages/index.astro
+    return Astro.redirect('/en/');
+    ---
+    ```
+    
 
 ### Translate UI
 
