Wrap redirect instructions in Static/SSR tab & tweak

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -5,6 +5,7 @@ type: recipe
 i18nReady: false
 ---
 import FileTree from '~/components/FileTree.astro'
+import StaticSsrTabs from '~/components/tabs/StaticSsrTabs.astro'
 
 Astro doesn't have built-in internationalization (i18n) support, but you can build your own i18n solution. In this recipe, you'll learn how to use content collections and dynamic routing to serve content for different languages.
 
@@ -29,23 +30,30 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
     
 2. Set up `src/pages/index.astro` to redirect to your default language.
 
-    ```astro
-    ---
-    // src/pages/index.astro
-    ---
-    <meta http-equiv="refresh" content="0;url=/en/" />
-    ```
+    <StaticSsrTabs>
+      <Fragment slot="static">
+        ```astro
+        ---
+        // src/pages/index.astro
+        ---
+        <meta http-equiv="refresh" content="0;url=/en/" />
+        ```
 
-    This approach uses a [meta refresh](https://en.wikipedia.org/wiki/Meta_refresh), which will work no matter how you deploy your site.
-    
-    If you are using an SSR adapter, you can use [`Astro.redirect`](/en/guides/server-side-rendering/#astroredirect) instead:
+        This approach uses a [meta refresh](https://en.wikipedia.org/wiki/Meta_refresh) and will work however you deploy your site. Some static hosts also let you configure server redirects with a custom configuration file. See your deploy platform’s documentation for more details.
+      </Fragment>
+      
+      <Fragment slot ="ssr">
+        If you are using an SSR adapter, you can use [`Astro.redirect`](/en/guides/server-side-rendering/#astroredirect) to redirect to the default language on the server.
 
-    ```astro
-    ---
-    // src/pages/index.astro
-    return Astro.redirect('/en/');
-    ---
-    ```
+        ```astro
+        ---
+        // src/pages/index.astro
+        return Astro.redirect('/en/');
+        ---
+        ```
+      </Fragment>
+    </StaticSsrTabs>
+
     
 
 ### Translate UI
