--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -194,53 +194,64 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
     ```
     📚 [Read more about Content Collections.](/en/guides/content-collections/)
 
-3. Use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) to fetch and render content based on a `lang` and a `slug` parameter. In static rendering mode, use `getStaticPaths` to map each content entry to a page:
-    ```astro
-    //src/pages/[lang]/blog/[...slug].astro
-    ---
-    import { getCollection } from 'astro:content'
+3. Use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) to fetch and render content based on a `lang` and a `slug` parameter.
 
-    export async function getStaticPaths() {
-      const pages = await getCollection('blog')
+    <StaticSsrTabs>
+      <Fragment slot="static">
+        In static rendering mode, use `getStaticPaths` to map each content entry to a page:
 
-      const paths = pages.map(page => {
-        const [lang, ...slug] = page.slug.split('/');
-        return { params: { lang, slug: slug.join('/') || undefined }, props: page }
-      })
+        ```astro
+        //src/pages/[lang]/blog/[...slug].astro
+        ---
+        import { getCollection } from 'astro:content'
 
-      return paths;
-    }
+        export async function getStaticPaths() {
+          const pages = await getCollection('blog')
 
-    const { lang, slug } = Astro.params;
-    const page = Astro.props;
-    const formattedDate = page.data.date.toLocaleString(lang);
+          const paths = pages.map(page => {
+            const [lang, ...slug] = page.slug.split('/');
+            return { params: { lang, slug: slug.join('/') || undefined }, props: page }
+          })
 
-    const { Content } = await page.render();
-    ---
-    <h1>{page.data.title}</h1>
-    <p>by {page.data.author} at {formattedDate}</p>
-    <Content/>
-    ```
-    
-    In [SSR mode](/en/guides/server-side-rendering/), fetch the requested entry directly:
+          return paths;
+        }
 
-    ```astro
-    //src/pages/[lang]/blog/[...slug].astro
-    ---
-    import { getEntryBySlug } from 'astro:content';
-    
-    const { lang, slug } = Astro.params;
-    const page = await getEntryBySlug('blog', `${lang}/${slug}`);
-    if (!page) {
-      return Astro.redirect("/404");
-    }
-    const formattedDate = page.data.date.toLocaleString(lang);
-    const { Content, headings } = await page.render();
-    ---
-    <h1>{page.data.title}</h1>
-    <p>by {page.data.author} at {formattedDate}</p>
-    <Content/>
-    ```
+        const { lang, slug } = Astro.params;
+        const page = Astro.props;
+        const formattedDate = page.data.date.toLocaleString(lang);
+
+        const { Content } = await page.render();
+        ---
+        <h1>{page.data.title}</h1>
+        <p>by {page.data.author} at {formattedDate}</p>
+        <Content/>
+        ```
+      </Fragment>
+
+      <Fragment slot="ssr">
+        In [SSR mode](/en/guides/server-side-rendering/), fetch the requested entry directly:
+
+        ```astro
+        //src/pages/[lang]/blog/[...slug].astro
+        ---
+        import { getEntryBySlug } from 'astro:content';
+
+        const { lang, slug } = Astro.params;
+        const page = await getEntryBySlug('blog', `${lang}/${slug}`);
+
+        if (!page) {
+          return Astro.redirect("/404");
+        }
+
+        const formattedDate = page.data.date.toLocaleString(lang);
+        const { Content, headings } = await page.render();
+        ---
+        <h1>{page.data.title}</h1>
+        <p>by {page.data.author} at {formattedDate}</p>
+        <Content/>
+        ```
+      </Fragment>
+    </StaticSsrTabs>
 
 ### Use links to switch between languages
 
