--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -54,7 +54,101 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
       </Fragment>
     </StaticSsrTabs>
 
-    
+### Use collections for translated content
+
+1. Create a folder in `src/content` for each type of content you want to include, and create subdirectories for each supported language. For example, to support English and French blog posts:
+
+    <FileTree>
+    - src/
+      - content/
+          - blog/
+            - en/
+                - post1.md
+                - post2.md
+            - fr/
+              - post1.md
+              - post2.md
+    </FileTree>
+
+2. Create a `src/content/config.ts` file and export a collection for each type of content.
+
+    ```ts
+    //src/content/config.ts
+    import { defineCollection, z } from 'astro:content';
+
+    const blogCollection = defineCollection({
+      schema: z.object({
+        title: z.string(),
+        author: z.string(),
+        date: z.date()
+      })
+    });
+
+    export const collections = {
+      'blog': blogCollection
+    };
+
+    ```
+    📚 [Read more about Content Collections.](/en/guides/content-collections/)
+
+3. Use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) to fetch and render content based on a `lang` and a `slug` parameter.
+
+    <StaticSsrTabs>
+      <Fragment slot="static">
+        In static rendering mode, use `getStaticPaths` to map each content entry to a page:
+
+        ```astro
+        //src/pages/[lang]/blog/[...slug].astro
+        ---
+        import { getCollection } from 'astro:content'
+
+        export async function getStaticPaths() {
+          const pages = await getCollection('blog')
+
+          const paths = pages.map(page => {
+            const [lang, ...slug] = page.slug.split('/');
+            return { params: { lang, slug: slug.join('/') || undefined }, props: page }
+          })
+
+          return paths;
+        }
+
+        const { lang, slug } = Astro.params;
+        const page = Astro.props;
+        const formattedDate = page.data.date.toLocaleString(lang);
+
+        const { Content } = await page.render();
+        ---
+        <h1>{page.data.title}</h1>
+        <p>by {page.data.author} at {formattedDate}</p>
+        <Content/>
+        ```
+      </Fragment>
+
+      <Fragment slot="ssr">
+        In [SSR mode](/en/guides/server-side-rendering/), fetch the requested entry directly:
+
+        ```astro
+        //src/pages/[lang]/blog/[...slug].astro
+        ---
+        import { getEntryBySlug } from 'astro:content';
+
+        const { lang, slug } = Astro.params;
+        const page = await getEntryBySlug('blog', `${lang}/${slug}`);
+
+        if (!page) {
+          return Astro.redirect("/404");
+        }
+
+        const formattedDate = page.data.date.toLocaleString(lang);
+        const { Content, headings } = await page.render();
+        ---
+        <h1>{page.data.title}</h1>
+        <p>by {page.data.author} at {formattedDate}</p>
+        <Content/>
+        ```
+      </Fragment>
+    </StaticSsrTabs>
 
 ### Translate UI
 
@@ -156,102 +250,6 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
         ...
     </Base>
     ```
-
-### Use content collections for translated posts
-
-1. Create a folder in `src/content` for each type of content you want to include, and create subdirectories for each supported language. For example, to support English and French blog posts:
-
-    <FileTree>
-    - src/
-      - content/
-          - blog/
-            - en/
-                - post1.md
-                - post2.md
-            - fr/
-              - post1.md
-              - post2.md
-    </FileTree>
-
-2. Create a `src/content/config.ts` file and export a collection for each type of content.
-
-    ```ts
-    //src/content/config.ts
-    import { defineCollection, z } from 'astro:content';
-
-    const blogCollection = defineCollection({
-      schema: z.object({
-        title: z.string(),
-        author: z.string(),
-        date: z.date()
-      })
-    });
-
-    export const collections = {
-      'blog': blogCollection
-    };
-
-    ```
-    📚 [Read more about Content Collections.](/en/guides/content-collections/)
-
-3. Use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) to fetch and render content based on a `lang` and a `slug` parameter.
-
-    <StaticSsrTabs>
-      <Fragment slot="static">
-        In static rendering mode, use `getStaticPaths` to map each content entry to a page:
-
-        ```astro
-        //src/pages/[lang]/blog/[...slug].astro
-        ---
-        import { getCollection } from 'astro:content'
-
-        export async function getStaticPaths() {
-          const pages = await getCollection('blog')
-
-          const paths = pages.map(page => {
-            const [lang, ...slug] = page.slug.split('/');
-            return { params: { lang, slug: slug.join('/') || undefined }, props: page }
-          })
-
-          return paths;
-        }
-
-        const { lang, slug } = Astro.params;
-        const page = Astro.props;
-        const formattedDate = page.data.date.toLocaleString(lang);
-
-        const { Content } = await page.render();
-        ---
-        <h1>{page.data.title}</h1>
-        <p>by {page.data.author} at {formattedDate}</p>
-        <Content/>
-        ```
-      </Fragment>
-
-      <Fragment slot="ssr">
-        In [SSR mode](/en/guides/server-side-rendering/), fetch the requested entry directly:
-
-        ```astro
-        //src/pages/[lang]/blog/[...slug].astro
-        ---
-        import { getEntryBySlug } from 'astro:content';
-
-        const { lang, slug } = Astro.params;
-        const page = await getEntryBySlug('blog', `${lang}/${slug}`);
-
-        if (!page) {
-          return Astro.redirect("/404");
-        }
-
-        const formattedDate = page.data.date.toLocaleString(lang);
-        const { Content, headings } = await page.render();
-        ---
-        <h1>{page.data.title}</h1>
-        <p>by {page.data.author} at {formattedDate}</p>
-        <Content/>
-        ```
-      </Fragment>
-    </StaticSsrTabs>
 
 ### Use links to switch between languages
 
