Code style consistency

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -137,7 +137,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
         const page = await getEntryBySlug('blog', `${lang}/${slug}`);
 
         if (!page) {
-          return Astro.redirect("/404");
+          return Astro.redirect('/404');
         }
 
         const formattedDate = page.data.date.toLocaleString(lang);
