Add links to community libraries

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -314,3 +314,7 @@ Create links to the different languages you support so users can choose the lang
 ## Resources
 - [Choosing a Language Tag](https://www.w3.org/International/questions/qa-choosing-language-tags)
 - [Right-to-left Styling 101](https://rtlstyling.com/)
+
+## Community libraries
+- [astro-i18next](https://github.com/yassinedoghri/astro-i18next) — An Astro integration for i18next including some utility components.
+- [astro-i18n](https://github.com/alexandre-fernandez/astro-i18n) —  A TypeScript-first internationalization library for Astro.
