Revise content collections section

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -56,18 +56,18 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
 
 ### Use collections for translated content
 
-1. Create a folder in `src/content` for each type of content you want to include, and create subdirectories for each supported language. For example, to support English and French blog posts:
+1. Create a folder in `src/content/` for each type of content you want to include, and create subdirectories for each supported language. For example, to support English and French blog posts:
 
     <FileTree>
     - src/
       - content/
           - blog/
-            - en/
-                - post1.md
-                - post2.md
-            - fr/
-              - post1.md
-              - post2.md
+            - **en/** Blog posts in English
+                - post-1.md
+                - post-2.md
+            - **fr/** Blog posts in French
+              - post-1.md
+              - post-2.md
     </FileTree>
 
 2. Create a `src/content/config.ts` file and export a collection for each type of content.
@@ -149,6 +149,8 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
         ```
       </Fragment>
     </StaticSsrTabs>
+
+    📚 [Read more about dynamic routing](/en/core-concepts/routing/#dynamic-routes)
 
 ### Translate UI strings
 
