New community resource
Just made a new blog post... 😊

--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -26,3 +26,4 @@ Add your own here! See our [recipes contributing guide](https://github.com/witha
 - [Add searching to your site with Pagefind](https://blog.otterlord.dev/post/astro-search/)
 - [Get VSCode, ESLint & Prettier working with Astro](https://patheticgeek.dev/blog/astro-prettier-eslint-vscode)
 - [Enhance your Astro builds: modify HTML files post-build](https://straffesites.com/en/blog/optimize-astro-html-post-build)
+- [Astro Setup: Svelte, Tailwind CSS, Vercel, Prettier and TypeScript](https://straffesites.com/en/blog/astro-setup-svelte-tailwindcss-vercel-prettier-typescript)
