Comma clean-up and “add” not “create”
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -56,7 +56,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
 
 ### Use collections for translated content
 
-1. Create a folder in `src/content/` for each type of content you want to include, and create subdirectories for each supported language. For example, to support English and French blog posts:
+1. Create a folder in `src/content/` for each type of content you want to include and add subdirectories for each supported language. For example, to support English and French blog posts:
 
     <FileTree>
     - src/
