Better read more links

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -89,7 +89,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
     };
 
     ```
-    📚 [Read more about Content Collections.](/en/guides/content-collections/)
+    📚 Read more about [Content Collections](/en/guides/content-collections/).
 
 3. Use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) to fetch and render content based on a `lang` and a `slug` parameter.
 
@@ -150,7 +150,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
       </Fragment>
     </StaticSsrTabs>
 
-    📚 [Read more about dynamic routing](/en/core-concepts/routing/#dynamic-routes)
+    📚 Read more about [dynamic routing](/en/core-concepts/routing/#dynamic-routes).
 
 ### Translate UI strings
 
