--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -102,7 +102,7 @@ In your `.tsconfig` file, you can instruct TypeScript to help with this.
     ```
 	</Fragment>
 	<Fragment slot="panel.5.0">
-		Set [`verbatimModuleSyntax`](https://www.typescriptlang.org/tsconfig#verbatimModuleSyntax) to `true`. TypeScript will check your imports and tell you when `import type` should be used. This setting is included by default in our `strict` and `strictest` templates.
+		Set [`verbatimModuleSyntax`](https://www.typescriptlang.org/tsconfig#verbatimModuleSyntax) to `true`. TypeScript will check your imports and tell you when `import type` should be used.
 
     ```json title="tsconfig.json" ins={3}
     {
