--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -201,8 +201,14 @@ const allBlogPosts = await getCollection("blog");
 
 Enabling asset support allows you to access the `astro:assets` module. This module exposes the following features:
 
-- `Image`
-- `getImage()`
+- `<Image />` (available in `.astro` and `.mdx` files)
+- `getImage()` (available in `.astro`, `.mdx`, `.ts`, `.js` on the server)
+
+:::caution
+`<Image />` is an Astro component and [can't be used in framework components](/en/core-concepts/framework-components/#can-i-use-astro-components-inside-my-framework-components).
+
+`getImage()` relies on server-only APIs and breaks the build when used on the client.
+:::
 
 ### `<Image />` (`astro:assets`)
 
