--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -28,7 +28,7 @@ Both types of services can provide `getHTMLAttributes()` to determine the other 
 
 ### External Services
 
-An external service points to a remote URL to be used as the `src` attribute of the final `<img>` tag. This remote endpoint should download, transform, and return the image.
+An external service points to a remote URL to be used as the `src` attribute of the final `<img>` tag. This remote URL is responsible for downloading, transforming, and returning the image.
 
 ```js
 import type { ExternalImageService } from "astro";
