Add missing image

--- a/src/content/docs/en/guides/migrate-to-astro/from-gitbook.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gitbook.mdx
@@ -59,7 +59,7 @@ Once you have a new Astro project, you can sync your existing GitBook content to
 
 :::caution
 When enabling git sync be sure to specify "**GitBook to GitHub**" as the priority. This will ensure that your GitBook content is synced to your GitHub repository. Otherwise, you will overwrite your existing GitBook content.
-![Choose Priority](/img/gitbook/gitbook-gitsync.png)
+![Choose Priority](/guides/gitbook-gitsync.png)
 :::
 
 After syncing the content to your repository and deleting the sync, you'll have a copy of your GitBook content in your repository. There are a few things to take into account before you can use this content in your Astro project:
