--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -162,7 +162,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     // src/i18n/ui.ts
     export const languages = {
       en: 'English',
-      fr: 'français',
+      fr: 'Français',
     };
 
     export const defaultLang = 'en';
