--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -187,7 +187,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     import { ui, defaultLang } from './ui';
     
     export function getLangFromUrl(url: URL) {
-      const [, lang] = Astro.url.pathname.split('/');
+      const [, lang] = url.pathname.split('/');
       return lang || defaultLang;
     }
     
